test/cases/enums/enumerator_redef_name.c
// RUN: %check --only -e %s

enum E
{
	L = -1 // CHECK: error: mismatching definitions of "L"
} L; // CHECK: note: previous definition
